# citation-workflow

./: .env.example  .gitignore  README.md  flake.nix  pyproject.toml  workflow_diagram.dot
data/: query-document.txt
src/citation_workflow/: main.py  sample_query.txt
